[package]
name = "cargo-watt"
version = "0.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0"
pretty_env_logger = "0.4"
log = "0.4.8"

syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

toml_edit = "0.1"

walkdir = "2.3"
