[package]
name = "cargo-watt"
description = "generate watt versions of procedural macro crates"
version = "0.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0"
pretty_env_logger = "0.4"
log = "0.4.8"

syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

toml_edit = "0.1"
serde_json = "1.0"

walkdir = "2.3"
tempfile = "3.1"

ureq = { version = "1.0", default-features = false, features = ["tls"], optional = true }

flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", default-features = false, optional = true }

[features]
default = ["crates"]
crates = ["ureq", "flate2", "tar"]
