[package]
name = "cargo-watt"
version = "0.2.3"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "generate watt versions of procedural macro crates"
categories = ["development-tools::procedural-macro-helpers", "development-tools::cargo-plugins"]
repository = "https://github.com/jakobhellermann/cargo-watt"

[dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0"
pretty_env_logger = "0.4"
log = "0.4"

# syn = { version = "1.0", features = ["extra-traits"] }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

toml_edit = "0.2"
serde_json = "1.0"

cargo_metadata = "0.11"

walkdir = "2.3"
fastrand = "1.3"

ureq = { version = "1.4", default-features = false, features = ["tls"], optional = true }

flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", default-features = false, optional = true }
miniz_oxide = "0.4"
rayon = "1.4"

[features]
default = ["crates"]
crates = ["ureq", "flate2", "tar"]
