[package]
name = "test-crate"
version = "0.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
serde_derive = {path = "./.watt-patched/serde_derive"}
thiserror-impl = {path = "./.watt-patched/thiserror-impl"}
